--- a/.env
+++ b/.env
@@ -28,11 +28,15 @@ DB_DATABASE=hr2_finals
 DB_USERNAME=hr2_Mamaa
 DB_PASSWORD=Human_Resource
 
-SESSION_DRIVER=database
+SESSION_DRIVER=file
 SESSION_LIFETIME=120
 SESSION_ENCRYPT=false
 SESSION_PATH=/
 SESSION_DOMAIN=null
+
+SESSION_DOMAIN=.easetravelandtours.com
+SESSION_SECURE_COOKIE_=true
+SESSION_SAME_SITE=none
 
 BROADCAST_CONNECTION=log
 FILESYSTEM_DISK=local
